tests/spec/fail/path_join_non_string.aja
import (
    "path"
)

print(path.join(1, "x"))
